updating books in db and redis
